--- a/index.css
+++ b/index.css
@@ -307,6 +307,7 @@ input:checked + .button::before {
 }
 
 .search__container {
+  position: relative;
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -329,6 +330,20 @@ input[type="text"] {
 
 input[type="text"]::placeholder {
   font-weight: 600;
+}
+.search__container:active {
+  border: 1px solid var(--color-primary);
+  cursor: pointer;
+}
+.error__message {
+  position: absolute;
+  top: 3rem;
+  left: 1.5rem;
+  color: var(--color-error);
+}
+
+.search--error {
+  border: 1px solid var(--color-error);
 }
 
 .submit__btn {
